[gd_scene load_steps=8 format=3 uid="uid://qcwlvodqgy6n"]

[ext_resource type="Script" uid="uid://bjfwuhdk60gfs" path="res://main.gd" id="1_lquwl"]
[ext_resource type="Script" path="res://game_container.gd" id="2_lquwl"]
[ext_resource type="Material" uid="uid://birrjqr7ogf68" path="res://VFX/Post_Processing/postprocess_mat.tres" id="3_h2yge"]
[ext_resource type="PackedScene" uid="uid://cp6goy5fp0qxy" path="res://UI/pause_menu/pause_menu.tscn" id="4_1bvp3"]
[ext_resource type="PackedScene" uid="uid://c0vc7qj3i4q32" path="res://UI/start_menu/start_menu.tscn" id="5_lquwl"]
[ext_resource type="PackedScene" uid="uid://cfrvk1hwopvy3" path="res://UI/completed_menu.tscn" id="6_7mycd"]

[sub_resource type="QuadMesh" id="QuadMesh_1bvp3"]
flip_faces = true
size = Vector2(2, 2)

[node name="Main" type="Node"]
script = ExtResource("1_lquwl")

[node name="GameContainer" type="Node" parent="."]
script = ExtResource("2_lquwl")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StartMenu" parent="CanvasLayer" instance=ExtResource("5_lquwl")]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("4_1bvp3")]
visible = false

[node name="CompletedMenu" parent="CanvasLayer" instance=ExtResource("6_7mycd")]
visible = false

[node name="PostProcessingQuad" type="MeshInstance3D" parent="."]
material_override = ExtResource("3_h2yge")
cast_shadow = 0
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_1bvp3")
